--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-personal-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://siddhantekale.github.io",
+  "homepage": "https://siddhantekale.com",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
