Update deployment configuration and move CNAME to public directory

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,6 @@ jobs:
         with:
           folder: build
           branch: gh-pages
-          clean: true 
+          clean: true
+          commit-message: "Deploy to GitHub Pages"
+          force: true 
